include NIH presentation link

--- a/slides-info-reproducible-research/repro-research-summary.html
+++ b/slides-info-reproducible-research/repro-research-summary.html
@@ -140,6 +140,7 @@ Jessica Minnier
 <h1>NIH Principles and Guidelines for Reporting Preclinical Research</h1>
 <p><a href="http://www.nih.gov/research-training/rigor-reproducibility/principles-guidelines-reporting-preclinical-research" class="uri">http://www.nih.gov/research-training/rigor-reproducibility/principles-guidelines-reporting-preclinical-research</a></p>
 <p>NIH held a joint workshop in June 2014 with the Nature Publishing Group and Science on the issue of reproducibility and rigor of research findings</p>
+<p>A video/slide presentation about this topic can be found here: <a href="http://grants.nih.gov/grants/policy/rigor/NIH_Policy_Rigor_For_Reviewers/presentation.html" class="uri">http://grants.nih.gov/grants/policy/rigor/NIH_Policy_Rigor_For_Reviewers/presentation.html</a></p>
 </div><div id="nih-principles-and-guidelines-for-reporting-preclinical-research-1" class="slide section level2">
 <h1>NIH Principles and Guidelines for Reporting Preclinical Research</h1>
 <ul>
