added aims document

--- a/README.html
+++ b/README.html
@@ -129,8 +129,9 @@ $(document).ready(function () {
 <div id="history" class="section level3">
 <h3>History</h3>
 <ul>
-<li>June 16, 2016. An updated version of presentation slides was presented by J Minnier at the BSR+CRAB retreat in Seattle. <a href="http://rpubs.com/minnier/repro-bsr">Rpubs link</a></li>
-<li>April 20, 2016. Presentation slides were initially presented by J Minnier at the weekly meeting for BSR members. <a href="http://rpubs.com/minnier/repro-bsr-2016-06">Rpubs link</a></li>
+<li>June 22, 2016. A record of reproducibility accomplishments and notes has been added. <a href="reproducible-research-aims.html" class="uri">reproducible-research-aims.html</a></li>
+<li>June 16, 2016. An updated version of presentation slides was presented by J Minnier at the BSR+CRAB retreat in Seattle. <a href="http://rpubs.com/minnier/repro-bsr-2016-06">Rpubs link</a></li>
+<li>April 20, 2016. Presentation slides were initially presented by J Minnier at the weekly meeting for BSR members. <a href="http://rpubs.com/minnier/repro-bsr">Rpubs link</a></li>
 </ul>
 </div>
 </div>
