inline code evaluation

--- a/slides-info-reproducible-research/study-group-2016/2016_08_10_intro-rstudio-knitr/minnier-2016-08-17-knitr.html
+++ b/slides-info-reproducible-research/study-group-2016/2016_08_10_intro-rstudio-knitr/minnier-2016-08-17-knitr.html
@@ -126,6 +126,7 @@ plot(x)
 <div id="features-of-knitr-irrr1" class="slide section level2">
 <h1>Features of Knitr (IRRR1)</h1>
 <ul>
+<li>inline code evaluation (never hard code a result or summary statistic again!)</li>
 <li>code highlighting</li>
 <li>graphics rendering
 <ul>
@@ -259,7 +260,7 @@ plot(x)
 <div id="now-lets-see-an-example" class="slide section level2">
 <h1>Now let’s see an example!</h1>
 <ol start="0" style="list-style-type: decimal">
-<li><a href="https://support.rstudio.com/hc/en-us/articles/200532077?version=0.99.893&amp;mode=desktop">Install git</a></li>
+<li><a href="https://git-scm.com/downloads">Install git</a></li>
 <li>File –&gt; New Project –&gt; Version Control –&gt; Git</li>
 <li>Repository URL: <a href="https://github.com/jminnier/DataSharingPolicies.git" class="uri">https://github.com/jminnier/DataSharingPolicies.git</a></li>
 <li>Project Directory Name: <code>WhateverYouWant</code></li>
