final presentation for august 17

--- a/slides-info-reproducible-research/study-group-2016/2016_08_10_intro-rstudio-knitr/minnier-2016-08-17-knitr.html
+++ b/slides-info-reproducible-research/study-group-2016/2016_08_10_intro-rstudio-knitr/minnier-2016-08-17-knitr.html
@@ -102,7 +102,7 @@ Jessica Minnier, BSR Reproducible Research Journal Club
 <h1>Behind the scenes of Knitr (IRRR1)</h1>
 <p>Three parts:</p>
 <ul>
-<li>parser: finds the code in your document based on special patterns of text (such as code that starts with <code>{r} and ends with</code> )</li>
+<li>parser: finds the code in your document based on special patterns of text (such as code that starts with ```<code>{r}</code> and ends with <code>```</code> )</li>
 <li>evaluator: evaluates the R code (or other type of code), returns a list of output (including errors, messages, normal output)
 <ul>
 <li>Note we can turn some of this off using <strong>code chunk options</strong></li>
