characters copy and pasted from microsoft office = strange characters in windows html. fixed a few.

--- a/slides-info-reproducible-research/study-group-2016/2016_08_10_intro-rstudio-knitr/minnier-2016-08-17-knitr.html
+++ b/slides-info-reproducible-research/study-group-2016/2016_08_10_intro-rstudio-knitr/minnier-2016-08-17-knitr.html
@@ -71,8 +71,8 @@ Jessica Minnier, BSR Reproducible Research Journal Club
 </ul></li>
 </ul>
 </div>
-<div id="irrr1-knitr-a-comprehensive-tool-for-reproducible-research-in-r-yihui-xie" class="slide section level2">
-<h1><a href="https://books.google.com/books?id=WVTSBQAAQBAJ&amp;pg=PA3&amp;source=gbs_toc_r&amp;cad=4#v=onepage&amp;q&amp;f=false">IRRR1</a> knitr: A comprehensive tool for reproducible research in R – Yihui Xie</h1>
+<div id="irrr1-knitr-a-comprehensive-tool-for-reproducible-research-in-r---yihui-xie" class="slide section level2">
+<h1><a href="https://books.google.com/books?id=WVTSBQAAQBAJ&amp;pg=PA3&amp;source=gbs_toc_r&amp;cad=4#v=onepage&amp;q&amp;f=false">IRRR1</a> knitr: A comprehensive tool for reproducible research in R - Yihui Xie</h1>
 <ul>
 <li>A short version of Yihui’s book <em>Dynamic Documents with R and Knitr</em></li>
 <li><a href="http://yihui.name/knitr/">Knitr website</a></li>
@@ -88,8 +88,8 @@ Jessica Minnier, BSR Reproducible Research Journal Club
 <li>Main design philosophy: “make reproducible research easier and more enjoyable than the common practice of cut-and-paste results”</li>
 </ul>
 </div>
-<div id="knitr-r-markdown-rmd" class="slide section level2">
-<h1>Knitr – R Markdown (Rmd)</h1>
+<div id="knitr---r-markdown-rmd" class="slide section level2">
+<h1>Knitr - R Markdown (Rmd)</h1>
 <ul>
 <li>Rmd is one of the documents that knitr supports (and simplest).</li>
 <li><p>If we have a .Rmd file with code and text, we can use the <code>knit</code> command to run the R code and convert the document to html:</p>
