update SOPs and checklists

--- a/reproducible-checklist.html
+++ b/reproducible-checklist.html
@@ -119,16 +119,17 @@ $(document).ready(function () {
 </div>
 
 
-<p>Updated: September 20, 2016</p>
+<p>Updated: October 4, 2016</p>
 <p>Reproduciblity can occur at every step in the history of your project. How easy will it be for others or your future self to answer these questions?</p>
+<p><strong>BOLDED questions are required</strong> (check these first) and the others are suggested (we aim for maximum reproducibility, please read them and consider how your project fits into these guidelines).</p>
 <div id="aims" class="section level1">
 <h1>Aims</h1>
 <ul>
-<li>Do good science.</li>
-<li>Think about the whole analysis pipeline.</li>
+<li><strong>Do good science.</strong></li>
+<li><strong>Think about the whole analysis pipeline.</strong></li>
 <li>Do not do anything by hand if you can avoid it.</li>
 <li>Use version control whenever possible.</li>
-<li>Document, document, document.</li>
+<li><strong>Document, document, document.</strong></li>
 </ul>
 </div>
 <div id="data" class="section level1">
@@ -142,13 +143,13 @@ $(document).ready(function () {
 <h1>Documentation</h1>
 <ul>
 <li>Did you create a README?</li>
-<li>Is it clear where to begin? (e.g., can someone picking a project up see where to start running it)</li>
-<li>Are all files in the appropriate folders as described by the File and Folder SOPs?</li>
-<li>Can you determine which file(s) was/were used as input in a process that produced a derived file?</li>
+<li><strong>Is it clear where to begin? (e.g., can someone picking a project up see where to start running it) </strong></li>
+<li><strong>Are all files in the appropriate folders as described by the File and Folder SOPs?</strong></li>
+<li><strong>Can you determine which file(s) was/were used as input in a process that produced a derived file? </strong></li>
 <li>Do not save output files, save data + code + documentation instead. Only save output if you have very clearly documented how it was created.</li>
-<li>Have you cited everything that should be cited? (code, data, etc.)</li>
-<li>Is there documentation about every result?</li>
-<li>Is the statistical methods section written to include every method performed?</li>
+<li><strong>Have you cited everything that should be cited? (code, data, etc.) </strong></li>
+<li><strong>Is there documentation about every result? </strong></li>
+<li><strong>Is the statistical methods section written to include every method performed?</strong></li>
 <li>Have you noted the exact version of every external application used in the process?</li>
 <li>For analyses that include randomness, have you noted the underlying random seed(s)?</li>
 <li>Have you specified the license under which you’re distributing your content, data, and code?</li>
@@ -158,7 +159,8 @@ $(document).ready(function () {
 <div id="organization" class="section level1">
 <h1>Organization</h1>
 <ul>
-<li>Which is the most recent data file/code?</li>
+<li><strong>Which is the most recent data file/code? </strong></li>
+<li><strong>Where did a file that you didn’t generate come from? </strong></li>
 <li>Which files/folders can I safely delete?
 <ul>
 <li>Keep older files in an archive.</li>
@@ -172,13 +174,12 @@ $(document).ready(function () {
 </ul></li>
 <li>How many times has a particular file been generated in the past?</li>
 <li>Why was the same file generated multiple times?</li>
-<li>Where did a file that I didn’t generate come from?</li>
 </ul>
 </div>
 <div id="automation" class="section level1">
 <h1>Automation</h1>
 <ul>
-<li>Are there manual data manipulation steps? If so, are they clearly documented?</li>
+<li><strong>Are there manual data manipulation steps? If so, are they clearly documented?</strong></li>
 <li>Are there hard coded values in the code or in tables or reports? Avoid this if possible.</li>
 <li>Are all custom scripts under version control?</li>
 <li>Is your writing (content) under version control?</li>
