--- a/reproducible-research-SOP.html
+++ b/reproducible-research-SOP.html
@@ -11,7 +11,6 @@
 
 <meta name="author" content="Knight Biostatistics Shared Resource" />
 
-<meta name="date" content="2016-09-20" />
 
 <title>Reproducible Research SOPs</title>
 
@@ -118,7 +117,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">Reproducible Research SOPs</h1>
 <h4 class="author"><em>Knight Biostatistics Shared Resource</em></h4>
-<h4 class="date"><em>September 20, 2016</em></h4>
+<h4 class="date"><em>Updated: October 4, 2016</em></h4>
 
 </div>
 
@@ -144,6 +143,10 @@ $(document).ready(function () {
 </div>
 <div id="folder-organization-best-practices" class="section level2">
 <h2>Folder organization best practices</h2>
+<ul>
+<li>All new projects must follow this folder and file structure on the BSR server.</li>
+<li>Store a complete set of files to reproducible final results in the FinalResults folder..</li>
+</ul>
 <p>References:</p>
 <ul>
 <li><a href="https://www.maxmasnick.com/analysis-org" class="uri">https://www.maxmasnick.com/analysis-org</a></li>
@@ -156,10 +159,6 @@ $(document).ready(function () {
 </div>
 <div id="file-naming-best-practices" class="section level2">
 <h2>File naming best practices</h2>
-<ul>
-<li>All new projects must follow this folder and file structure on the BSR server.</li>
-<li>Store a complete set of files to reproducible final results in the FinalResults folder.</li>
-</ul>
 <p>References:</p>
 <ul>
 <li><a href="https://library.stanford.edu/research/data-management-services/data-best-practices/best-practices-file-naming" class="uri">https://library.stanford.edu/research/data-management-services/data-best-practices/best-practices-file-naming</a></li>
@@ -170,7 +169,7 @@ $(document).ready(function () {
 <div id="shared-code" class="section level1">
 <h1>Shared Code</h1>
 <ul>
-<li>Code that can be implemented in future projects as well as packages or libraries of functions should be stored in the Shared Code folder on the server, as well as github (<a href="https://github.com/ohsu-knight-cancer-biostatistics" class="uri">https://github.com/ohsu-knight-cancer-biostatistics</a>).</li>
+<li>Code that can be implemented in future projects as well as packages or libraries of functions should be stored in the Resources folder on the server, as well as github (<a href="https://github.com/ohsu-knight-cancer-biostatistics" class="uri">https://github.com/ohsu-knight-cancer-biostatistics</a>).</li>
 </ul>
 </div>
 <div id="training" class="section level1">
